--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Admin</title>
     <meta charset="utf-8">
-    <script src="https://unpkg.com/netlify-cms@latest/dist/netlify-cms.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/netlify-cms@latest/dist/netlify-cms.js"></script>
   </head>
   <body>
     <script>
