--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-storage.js"></script>
     <script>
         const firebaseConfig = {
-          apiKey: "YOUR_API_KEY",
-          authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-          projectId: "YOUR_PROJECT_ID",
-          storageBucket: "YOUR_PROJECT_ID.appspot.com",
-          messagingSenderId: "YOUR_SENDER_ID",
-          appId: "YOUR_APP_ID"
+          apiKey: "AIzaSyDAz4mm2USaEuZ0tMBRnZ15xoGAdFVF7Ow",
+          authDomain: "blog-foryou.firebaseapp.com",
+          projectId: "blog-foryou",
+          storageBucket: "blog-foryou.appspot.com",
+          messagingSenderId: "29953982881",
+          appId: "1:29953982881:web:a5c26d1a02b2d5e5c40be0"
         };
         
         firebase.initializeApp(firebaseConfig);
